--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.container{
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.error{
+  border: 1px solid #ff5b5f;
+  background: #ffc5c1;
+  padding: .6rem;
+  margin-bottom: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.post{
+  position: relative;
+  border: 1px solid #5bd658;
+  background: #bcffb8;
+  padding: .6rem .6rem 1.9rem .6rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.created-at{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: .2rem 1rem;
+  background: darkgreen;
+  color: #fff;
+  font-size: .86rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text{
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 0;
 }
