--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,11 @@
+*{
+  box-sizing: border-box;
+}
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .container{
   max-width: 800px;
   margin: 0 auto;
